# Django-Models-Admin-Caudillo

./: .gitignore  Dockerfile  pyproject.toml
src/accounts/: models.py
src/accounts/migrations/: 0001_initial.py  0002_guestemail.py
src/addresses/: models.py
src/addresses/migrations/: 0001_initial.py
src/analytics/: urls.py  views.py
src/analytics/Template/: sales.html
src/billing/: models.py
src/billing/migrations/: 0001_initial.py
src/carts/: models.py
src/carts/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
src/ecommerce/: admin.py  form.py  models.py  urls.py  views.py
src/ecommerce/migrations/: 0001_initial.py  0009_alter_productmodel_id.py
src/order/: models.py
src/order/migrations/: 0001_initial.py
src/pages/: views.py
src/products/: admin.py  forms.py  models.py  urls.py  views.py
src/products/migrations/: 0001_initial.py  0002_digitalproduct_alter_product_slug.py  0003_product_user.py  0004_alter_product_id.py  0005_product_active_product_description_product_featured_and_more.py  0006_rename_prize_product_price.py
src/templates/: about.html  base.html  forms.html  team.html
src/templates/analytics/: sales.html
src/templates/base/: js.html
src/templates/ecommerce/: create-view.html  delete-view.html  detail-view.html  list-view-public.html  list-view.html  update-view.html
src/templates/products/: product_detail.html  product_list.html
