[project]
name = "hello"
version = "0.1.0"
description = "An example Django app running in Docker."
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
  "django==4.2.*",
  "celery==5.3.*",
  "django-debug-toolbar==4.*",
  "gunicorn==21.*",
  "psycopg==3.*",
  "redis==5.*",
  "ruff==0.14.*",
  "setuptools==80.*",
  "whitenoise==6.*",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I", "SIM"]
